getting subject tutoring set up

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -142,6 +142,7 @@
             <tr>
               <th>Student Name</th>
               <th></th>
+              <th>Type</th>
               <th>Location</th>
               <th>Status</th>
               <th>Parent Name</th>
