--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -50,6 +50,7 @@
             <tr>
               <th>Student Name</th>
               <th></th>
+              <th>Type</th>
             </tr>
           </thead>
         </table>
