secretary bug fixes

--- a/public/Dashboard/Secretary.html
+++ b/public/Dashboard/Secretary.html
@@ -60,6 +60,7 @@
             <tr>
               <th>Student Name</th>
               <th></th>
+              <th>Type</th>
               <th>Status</th>
               <th>Parent Name</th>
               <th></th>
