--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -342,9 +342,9 @@
     <section id="section">
 
         <div id = "sideNav" class = "nav_disabled">
-            <div id = "dailyLogNav" class = "button2" onclick = "openForm('dailyLog');addUnloadListener()">Daily Log</div>
-            <div id = "testReviewNav" class = "button2" onclick = "openForm('dailyLog')">Test Review</div>
-            <div id = "scoresNav" class = "button2" onclick = "openForm('dailyLog')">Test Scores</div>
+            <div id = "dailyLogNav" class = "button2" onclick = "openTab('dailyLog');addUnloadListener()">Daily Log</div>
+            <div id = "testReviewNav" class = "button2" onclick = "openTab('dailyLog')">Test Review</div>
+            <div id = "scoresNav" class = "button2" onclick = "openTab('scaledScoresTests')">Test Scores</div>
         </div>
 
         <div id = "printPopup" class = "printPopup" data-test = "">
@@ -371,11 +371,30 @@
 
         </div>
 
+        <div id = "scaledScoresTests" class = "metaForm noselect">
+
+            <div id = "scaledScoresTestsHeader" class="heading-block">
+                TESTS
+            </div>
+
+            <div id = 'scaledScoresTestsList' class = "formBody">
+            </div>
+
+            <div class = "input-row-center formEnd-center">
+
+                <button class = "button" onclick = "openForm('scaledScoresTests')">
+                    Back
+                </button>
+
+            </div>
+
+        </div>
+
         <div id = "testAnswersPopup" class = "metaForm noselect">
 
             <div id = "answersPopupHeader" class="heading-block">
-                <div id = "headerText">
-                </div>
+                <!--<div id = "headerText">
+                </div>-->
             </div>
 
             <div id = "toggleDiv" class = "input-row-center">
@@ -948,7 +967,6 @@
             </div>
 
         </div>
-
 
         <div id = "otherTestsForm" class = "metaForm noselect">
             <div id = "otherTestsTabs" class = "input-row">
@@ -2479,11 +2497,11 @@
                 <p id="errMsg" style="color: red;"></p>
             </div>
 
-            <div class = "input-row-center formEnd">
+            <div class = "input-row-center formEnd-center">
 
-                <button class = "button" onclick = "goToDashboard()">
+                <!--<button class = "button" onclick = "goToDashboard()">
                     Back
-                </button>
+                </button>-->
 
                 <button class = "button" onclick="submitDailyLog()">
                     Submit
