--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -378,11 +378,11 @@
 
             <div id = "scoresAnswersToggle" class = "input-row-center">
 
-                <button id = "scoresButton" class = "smallButton buttonToggleOn" onclick="openScores()">
+                <button id = "scoresButton" class = "smallButton buttonToggleOn" onclick="openForm('scaledScores')">
                     Scores
                 </button>
 
-                <button id = "fullAnswersButton" class = "smallButton buttonToggleOff" onclick="openAnswers()">
+                <button id = "fullAnswersButton" class = "smallButton buttonToggleOff" onclick="openForm('answers')">
                     Answers
                 </button>
 
@@ -436,11 +436,11 @@
 
             <div id = "answersScoresToggle" class = "input-row-center">
 
-                <button id = "scoresButton2" class = "smallButton buttonToggleOff" onclick="openScores()">
+                <button id = "scoresButton2" class = "smallButton buttonToggleOff" onclick="openForm('scaledScores')">
                     Scores
                 </button>
 
-                <button id = "fullAnswersButton2" class = "smallButton buttonToggleOn" onclick="openAnswers()">
+                <button id = "fullAnswersButton2" class = "smallButton buttonToggleOn" onclick="openForm('answers')">
                     Answers
                 </button>
 
