--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -64,8 +64,8 @@
             </div><br>
 
             <div class="input-row">
-              <button type = button id="submitBtn" class="button" onclick="closeUser('tutor')">back</button> 
-              <button type = button id="submitBtn" class="button" onclick="createTutor()">submit</button>
+              <button type = button class="button" onclick="closeUser('tutor')">back</button> 
+              <button type = button class="button" onclick="createTutor()">submit</button>
             </div>
 
             <div class="input-row">
@@ -110,8 +110,8 @@
             </div><br>
 
             <div class="input-row">
-              <button type = button id="submitBtn" class="button" onclick="closeUser('secretary')">back</button> 
-              <button type = button id="submitBtn" class="button" onclick="createSecretary()">submit</button>
+              <button type = button class="button" onclick="closeUser('secretary')">back</button> 
+              <button type = button class="button" onclick="createSecretary()">submit</button>
             </div>
 
             <div class="input-row">
