chart and chat optimizations

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -291,13 +291,13 @@
 
         <div id="student-notes-section">
             <div id="student-notes-labels" class="flex-row justify-space-evenly align-flex-end">
-                <h2 id="general-chat-label" class="student-notes-label composite flex-grow">General Notes</h2>
+                <h2 id="general-chat-label" class="student-notes-label composite flex-grow chat-label-selected">General Notes</h2>
                 <h2 id="english-chat-label" class="student-notes-label english flex-grow">English</h2>
                 <h2 id="math-chat-label" class="student-notes-label math flex-grow">Math</h2>
                 <h2 id="reading-chat-label" class="student-notes-label reading flex-grow">Reading</h2>
                 <h2 id="science-chat-label" class="student-notes-label science flex-grow">Science</h2>
             </div>
-            <div id="general-chat-area" class="chat-area-hidden">
+            <div id="general-chat-area" class="chat-area-visible">
                 <div id="student-general-notes" class="student-notes">
                 </div>
                 <textarea id="student-general-notes-input" class="student-notes-input" placeholder="Any general notes?"></textarea>
