Test Grading Changes

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -713,6 +713,7 @@
                 <div id = "submitHomeworkPopup" class = "popup">
 
                     <p id = 'assignFirst' style="color: white; display:none;">Test must be assigned first</p>
+                    <p id = 'alreadyGradedTest' style="color: white; display:none;">This test can't be changed</p>
                     <p id = 'gradeFirst' style="color: white; display:none;">Entire test must be graded first</p>
                     <p id = 'guessFirst' style="color: white; display:none;">Test must contain at least 1 guess</p>
                     
