--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -140,12 +140,12 @@
         <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
-              <th>Student Name</th>
+              <th>Student</th>
               <th></th>
               <th>Type</th>
               <th>Location</th>
               <th>Status</th>
-              <th>Parent Name</th>
+              <th>Parent</th>
               <th></th>
             </tr>
           </thead>
