--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -37,9 +37,9 @@
       </div>
       <div class="input-row">
         <div class="input-block">
-          <p><b>Beta Update:</b></p>
+          <!-- <p><b>Beta Update:</b></p>
           <p>Everything should be up and running for the daily log!</p>
-          <p>Please make sure and change your password after signing into your account for the first time.</p>
+          <p>Please make sure and change your password after signing into your account for the first time.</p> -->
           <button class="button" onclick="resetPassword()">reset password</button>
         </div>
       </div>
@@ -48,9 +48,9 @@
         <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
-              <th>Student Name</th>
-              <th></th>
+              <th>Student</th>
               <th>Type</th>
+              <th>Location</th>
             </tr>
           </thead>
         </table>
