--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -32,8 +32,8 @@
 
     <div class="flex-row">
       <button class="button" onclick="window.location.href='Admin.html'">Go to Admin</button>
-      <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
-      <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button>
+      <!-- <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
+      <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button> -->
     </div>
 
     <div>
