changed jpg to png

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -109,8 +109,8 @@
                 <div>
                     <div class = "input-row">
                         <label for = "test-dates" class="label">Test Date Goals:</label>
-                        <img src="../../Images/Add Button.jpg" alt="add test date goal" height=25px class = "firstButton" id="addTestDateGoalButton" onclick="addTestDateGoal(this)">
-                        <img src="../../Images/Remove Button.jpg" alt="remove test goal" height=25px class = "" id="removeTestDateGoalButton" onclick="removeTestDateGoal(this)">
+                        <img src="../../Images/Add Button.png" alt="add test date goal" height=25px class = "firstButton" id="addTestDateGoalButton" onclick="addTestDateGoal(this)">
+                        <img src="../../Images/Remove Button.png" alt="remove test goal" height=25px class = "" id="removeTestDateGoalButton" onclick="removeTestDateGoal(this)">
                     </div>
                 </div><br>
 
