--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -528,8 +528,8 @@
                     <div id = "actDiv" class = "input-block">
                         <div class = "input-row input-row-buttons">
                             <label for = "studentACTTestsArray" class="label">ACT Test(s):</label>
-                                <img src="../../Images/Add Button.jpg" alt="add previous ACT test" height=25px class = "button firstButton" id="addPreviousACTButton" onclick="addActTest()">
-                                <img src="../../Images/Remove Button.jpg" alt="remove previous ACT test" height=25px class = "button" id="removePreviousACTButton" onclick="removeActTest()">
+                                <img src="../../Images/Add Button.png" alt="add previous ACT test" height=25px class = "button firstButton" id="addPreviousACTButton" onclick="addActTest()">
+                                <img src="../../Images/Remove Button.png" alt="remove previous ACT test" height=25px class = "button" id="removePreviousACTButton" onclick="removeActTest()">
                         </div>
 
                     </div>
@@ -558,8 +558,8 @@
                         <div class="input-block">
                             <div class = "input-row-buttons">
                                 <label for="studentScholarshipArray" class="label">Scholarship goal(s):</label>
-                                <img src="../../Images/Add Button.jpg" alt="add scholarship goal" height=25px class = "button firstButton" id="addScholarshipGoalButton" onclick="addElement('studentScholarshipArray')">
-                                <img src="../../Images/Remove Button.jpg" alt="remove scholarship goal" height=25px class = "button" id="removeScholarshipGoalButton" onclick="removeElement('studentScholarshipArray')">
+                                <img src="../../Images/Add Button.png" alt="add scholarship goal" height=25px class = "button firstButton" id="addScholarshipGoalButton" onclick="addElement('studentScholarshipArray')">
+                                <img src="../../Images/Remove Button.png" alt="remove scholarship goal" height=25px class = "button" id="removeScholarshipGoalButton" onclick="removeElement('studentScholarshipArray')">
                             </div>
                         </div>
                     </div>
@@ -568,8 +568,8 @@
                         <div class="input-block">
                             <div class = "input-row-buttons">
                                 <label for="studentCollegeArray" class="label">Top College(s):</label>
-                                <img src="../../Images/Add Button.jpg" alt="add college" height=25px class = "button firstButton" id="addCollegeButton" onclick="addElement('studentCollegeArray')">
-                                <img src="../../Images/Remove Button.jpg" alt="remove college" height=25px class = "button" id="removeCollegeButton" onclick="removeElement('studentCollegeArray')">
+                                <img src="../../Images/Add Button.png" alt="add college" height=25px class = "button firstButton" id="addCollegeButton" onclick="addElement('studentCollegeArray')">
+                                <img src="../../Images/Remove Button.png" alt="remove college" height=25px class = "button" id="removeCollegeButton" onclick="removeElement('studentCollegeArray')">
                             </div>
                         </div>
                     </div>
@@ -578,8 +578,8 @@
                         <div class="input-block">
                             <div class = "input-row-buttons">
                                 <label for="studentExtracurricularArray" class="label">Extracurricular(s):</label>
-                                <img src="../../Images/Add Button.jpg" alt="add extracurricular" height=25px class = "button firstButton" id="addExtracurricularButton" onclick="addElement('studentExtracurricularArray')">
-                                <img src="../../Images/Remove Button.jpg" alt="remove extracurricular" height=25px class = "button" id="removeExtracurricularButton" onclick="removeElement('studentExtracurricularArray')">
+                                <img src="../../Images/Add Button.png" alt="add extracurricular" height=25px class = "button firstButton" id="addExtracurricularButton" onclick="addElement('studentExtracurricularArray')">
+                                <img src="../../Images/Remove Button.png" alt="remove extracurricular" height=25px class = "button" id="removeExtracurricularButton" onclick="removeElement('studentExtracurricularArray')">
                             </div>
                         </div>
                     </div>
