--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -470,7 +470,7 @@
                         </div>
 
                         <div class="input-block">
-                            <label for="studentGenders" class="label">Gender:</label>
+                            <label for="studentGender" class="label">Gender:</label>
                             <select id="studentGender" class="input">
                                     <option value="">Select a Gender</option>
                                     <option value="Female">Female</option>
