--- a/public/subject-tutoring-dash.html
+++ b/public/subject-tutoring-dash.html
@@ -24,9 +24,9 @@
     <div class="loading-ring"></div>
   </section>
 
-  <div id="student-general-info" ondblclick="updateStudentExpectation()">
+  <div id="student-general-info">
     <h1 id="student-name"></h1>
-    <h2 id="student-expectation"></h2>
+    <textarea id="student-expectation" class="expectation-input" disabled></textarea>
 </div>
 
   <div id="student-log-notes-div">
